clusters/my-cluster/releases/apps/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.xinfra.ru`)
      kind: Rule
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          namespace: monitoring
          passHostHeader: true
          port: 80
  tls:
    options:
      name: mtls-strict
      namespace: networking
    secretName: wildcard-xinfra-ru-tls
